--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:image" content="{% if page.image %}{{ site.url }}/images/{{ page.image }}{% else %}{{ site.url }}/images/og-image-dhawal-mehta-blog.jpg{% endif %}" />
+<meta property="og:image" content="{% if page.image %}{{ site.url }}/images/{{ page.image.feature }}{% else %}{{ site.url }}/images/og-image-dhawal-mehta-blog.jpg{% endif %}" />
 {% if page.date %}
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
   <meta content="{{ site.url }}/about/" property="article:author">
