--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,17 +21,17 @@
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:image" content="{% if page.image %}{{ site.url }}/images/{{ page.image.feature }}{% else %}{{ site.url }}/images/og-image-dhawal-mehta-blog.jpg{% endif %}" />
 {% if page.date %}
-  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  <meta content="{{ site.url }}/about/" property="article:author">
+  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" >
+  <meta property="article:author" content="{{ site.url }}/about/" >
 {% endif %}
 {% if page.categories %}
   {% for category in page.categories limit:1 %}
-  <meta content="{{ category }}" property="article:section">
+  <meta property="article:section" content="{{ category }}" >
   {% endfor %}
 {% endif %}
 {% if page.tags %}
   {% for tag in page.tags %}
-  <meta content="{{ tag }}" property="article:tag">
+  <meta property="article:tag" content="{{ tag }}" >
   {% endfor %}
 {% endif %}
 
